user_type added to model User
